# MLflow-Learning

./: README.md
mlflow-hyperparameter-tuning/: .gitignore  CHEATSHEET.md  README.md  autologging_demo.py  compare_runs.py  grid_search.py  optuna_tuning.py  pyproject.toml  random_search.py  run_all.py
mlfow-iris/: README.md  README_FASTAPI.md  fastapi_serve.py  inference.py  main.py  mlflow.db  pyproject.toml  register_model.py  set_alias.py  test_api.py  validate.py
mlfow-iris/mlruns/0/models/m-267c77d4c9824fb48518ca424f8446d0/artifacts/: MLmodel
mlfow-iris/mlruns/1/models/m-50ae4724e0cd4e96a5dd664352bb55ec/artifacts/: MLmodel
mlfow-iris/mlruns/783321528906734202/: meta.yaml
mlfow-iris/mlruns/783321528906734202/e8b4add6a04248f49dd6f2bd19f4600a/: meta.yaml
mlfow-iris/mlruns/783321528906734202/e8b4add6a04248f49dd6f2bd19f4600a/metrics/: accuracy
mlfow-iris/mlruns/783321528906734202/e8b4add6a04248f49dd6f2bd19f4600a/outputs/m-c10cebe5fe8a409e932dff7cf351a73b/: meta.yaml
mlfow-iris/mlruns/783321528906734202/e8b4add6a04248f49dd6f2bd19f4600a/tags/: experiment_description  mlflow.runName
mlfow-iris/mlruns/783321528906734202/models/m-c10cebe5fe8a409e932dff7cf351a73b/: meta.yaml
mlfow-iris/mlruns/783321528906734202/models/m-c10cebe5fe8a409e932dff7cf351a73b/artifacts/: MLmodel  conda.yaml
mlfow-iris/mlruns/783321528906734202/models/m-c10cebe5fe8a409e932dff7cf351a73b/metrics/: accuracy
mlfow-iris/mlruns/models/iris_classifier/: meta.yaml
mlfow-iris/mlruns/models/iris_classifier/version-1/: meta.yaml
(+2 files in other folders)
